<resources>
    <string name="app_name">酷办投屏</string>
    <string name="login_phone_num">请输入账号</string>
    <string name="login_sms_code">请输入密码</string>
    <string name="login_gain_sms_code">获取验证码</string>
    <string name="login_resend">重新发送</string>
    <string name="data_loading">加载中&#8230;</string>
    <string name="login_button">登录</string>
    <string name="switch_theme">切换主题</string>
    <string name="version_update_text">版本更新</string>
    <string name="exit_program">退出程序</string>
    <string name="new_confirm">立即下载</string>
    <string name="cancle_refresh">暂不更新</string>
    <string name="version_update">发现最新版本，邀您体验</string>
    <string name="down_apk">正在下载最新版本</string>
    <string name="updated">已经是最新版了</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="url_prompt">是否保存网址修改</string>
    <string name="url_not_empty">网址不能为空</string>
    <string name="url_not_error">网址格式错误</string>
    <string name="no_optional_conference_room">没有可选会议室</string>
    <string name="query_data_error">查询平板信息数据错误</string>
    <string name="query_data_failure">查询平板信息失败请重新选择会议室</string>
    <string name="no_binding_meeting_room">没有绑定会议室请先绑定会议室</string>
    <string name="save_url">保存</string>
    <string name="editor_url">编辑</string>
    <string name="location">分店</string>
    <string name="meeting_room">会议室</string>
    <string name="domain_name_set_up_the">域名设置</string>
    <string name="set_up_the">设置</string>
    <string name="enter_home_page">进入</string>
    <string name="the_current_meeting_room">当前会议室：</string>
    <string name="change">修改会议室</string>
    <string name="no_new_version">没有新版本下载地址</string>
    <string name="channel_name">请输入投屏码</string>
    <string name="binding_hint">请将上面6位数字输入到管理后台的平板配对输入框中</string>
    <string name="again_generate_code">重新生成配对码</string>
    <string name="again_generate_code_hint">%1$ss后重新生成配对码</string>
    <string name="binding_successful">配对成功</string>
    <string name="binding_successful_hint">现在可以在企业管理后台设置迎接你的第一个访客了</string>
    <string name="open_visitors_system">开启智能访客系统</string>
    <string name="company_name">公司名</string>
    <string name="location_name">分部名</string>
    <string name="again_match">重新配对门禁</string>

</resources>
